fix menu bug with visible

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -56,7 +56,7 @@ body, html
 
 .menu
   margin-bottom: 0
-  display: none
+  display: flex
 
 .hamburger
   display: none
